mdapi/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses (Account)</relationshipLabel>
        <relationshipName>Licensing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activation__c</fullName>
        <inlineHelpText>License Activation Date</inlineHelpText>
        <label>Activation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Source__c</fullName>
        <label>Source CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <inlineHelpText>Key Expiration</inlineHelpText>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Chinese Traditional</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linux__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License Manager</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Licenses</relationshipLabel>
        <relationshipName>EndUserLicenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replaced_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced By</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replaced_by_License_Number__c</fullName>
        <label>Replaced by License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>RequestType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScribeExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ScribeExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>License Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Key Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>SPX Linux</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Image Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Language__c</columns>
        <columns>Expiration__c</columns>
        <columns>Activation__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>